- Fixed header sizing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <div class="header-content">
               <div class="header-content-left">
-                  <h1>This website is awesome</h1>
+                  <h1 class="content-header">This website is awesome</h1>
                   <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                   <button>Sign up</button>
               </div>
@@ -31,7 +31,7 @@
       </div>
       <div class="content-section two">2</div>
       <div class="content-section three">3</div>
-      <div class="content-section-small four">4</div>
+      <div class="content-section four">4</div>
     </div>
     <footer>Footer</footer>
 </body>
