- Completed changed html and css layout

--- a/index.html
+++ b/index.html
@@ -6,33 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    </style>
 </head>
 <body>
-    <div class="outer-container">
-      <div class="content-section one">
-        <div class="content-section-one-container">
-          <div id="header">
-              <h1 class="header-logo">Header Logo</h1>
-              <ul class="header-links">
-                  <li><a>Header link one</a></li>
-                  <li><a>Header link two</a></li>
-                  <li><a>Header link three</a></li>
-              </ul>
-          </div>
-          <div class="header-content">
-              <div class="header-content-left">
-                  <h1 class="content-header">This website is awesome</h1>
-                  <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                  <button>Sign up</button>
-              </div>
-              <img src="/images/placeholder.png">
-          </div>
+    <div class="section-one">
+        <div class="header">
+            <h1>Header Logo</h1>
+            <ul class="header-links">
+                <li><a>Link one</a></li>
+                <li><a>Link two</a></li>
+                <li><a>Link three</a></li>
+            </ul>
         </div>
-      </div>
-      <div class="content-section two">2</div>
-      <div class="content-section three">3</div>
-      <div class="content-section four">4</div>
+        <div class="child-container-one">
+            <div class="left-container">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <img src="/images/placeholder.png">
+        </div>
     </div>
+    <div class="section-two"></div>
+    <div class="section-three"></div>
+    <div class="section-four"></div>
     <footer>Footer</footer>
 </body>
 </html>
