--- a/index.html
+++ b/index.html
@@ -29,7 +29,30 @@
             <img src="/images/placeholder.png">
         </div>
     </div>
-    <div class="section-two"></div>
+    <div class="section-two">
+        <div class="section-wrapper2">
+            <h2>Some random information.</h2>
+            <div class="row-container">
+                <div class="image-text-container">
+                    <img>
+                    <p>subtext</p>
+                </div>
+                <div class="image-text-container">
+                    <img>
+                    <p>subtext</p>
+                </div>
+                <div class="image-text-container">
+                    <img>
+                    <p>subtext</p>
+                </div>
+                <div class="image-text-container">
+                    <img>
+                    <p>subtext</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
     <div class="section-three"></div>
     <div class="section-four"></div>
     <footer>Footer</footer>
