--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
 
         </div>
     </div>
-    <div class="section-three"></div>
+    <div class="section-three">
+        <div class="section-wrapper3">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+    </div>
     <div class="section-four"></div>
     <footer>Footer</footer>
 </body>
