- Added call to action - Added footer - Removed border box guide

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="left-container">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+                <button class="header-button">Sign up</button>
             </div>
             <img src="/images/placeholder.png">
         </div>
@@ -59,7 +59,15 @@
             <p class="author">-Thor, God of Thunder</p>
         </div>
     </div>
-    <div class="section-four"></div>
-    <footer>Footer</footer>
+    <div class="section-four">
+        <div class="section-wrapper4">
+            <div class="action-container">
+                <p class="top-text">Call to action! It's time!</p>
+                <p class="bottom-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
+    </div>
+    <footer>Copyright &copy; The Odin Project 2021</footer>
 </body>
 </html>
